# helpmeapp

./: .gitignore  Dockerfile  README.md  pyproject.toml
helpme/: docker-compose.yml
helpme/helpapp/: admin.py  embeddings.py  models.py  urls.py  views.py
helpme/helpapp/migrations/: 0001_initial.py
helpme/helpapp/static/helpapp/css/: base.css  file_portal.css
helpme/helpapp/static/helpapp/js/: file_portal.js
helpme/helpapp/templates/helpapp/: all_files.html  ask.html  base.html  file_portal.html  home.html
helpme/helpme/: asgi.py  settings.py  urls.py  wsgi.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/MyDocuments/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/MyDocuments/0/segments/5b9a83ce-4982-4561-9eca-460c203dd44e/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/MyDocuments/0/segments/788f5ce7-57b5-40b1-b6b5-bc6c0922393e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/MyDocuments/0/segments/80af7a92-421d-42cc-af65-cd506ccdf324/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/MyDocuments/0/segments/9225dca7-2c42-4fd2-ba75-5eff49970651/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/MyDocuments/0/segments/c76fd862-a312-4e8b-92c3-00422c884904/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/MyDocuments/0/segments/e3445532-b501-467b-a041-09340ae53352/: mutable_id_tracker.mappings  mutable_id_tracker.versions  (+1 more)
