[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.11",
    "easyocr>=1.7.2",
    "openai>=2.20.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "qdrant-client>=1.16.2",
]
